--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -1,13 +1,12 @@
-
 <!-- Top header start -->
 <header class="top-header th-2 top-header-bg">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-7">
                 <div class="list-inline">
-                    <a href="tel:+55-4XX-634-7071"><i class="fa fa-phone"></i>+55-4XX-634-7071</a>
-                    <a href="tel:info@themevessel.com"><i class="fa fa-envelope"></i>info@themevessel.com</a>
-                    <a href="tel:info@themevessel.com"><i class="fa fa-clock-o"></i>Mon - Sun: 8:00am - 6:00pm</a>
+                    <a href="tel:+55-4XX-634-7071"><i class="fa fa-phone"></i>{{ data.phone }}</a>
+                    <a href="tel:info@themevessel.com"><i class="fa fa-envelope"></i>{{ data.email}}</a>
+                    <a href="tel:info@themevessel.com"><i class="fa fa-clock-o"></i>{{data.workingday_start}} - {{data.workingday_end}}: {{data.Time_start}}:00am - {{data.Time_end}}:00pm</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-5">
