--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -128,7 +128,7 @@
                 <div class="slick-slide-item">
                     <div class="car-box-3">
                         <div class="car-thumbnail">
-                            <a href="car-details.html" class="car-img">
+                            <a href="{% url 'car_details' data.id%}" class="car-img">
                                 <div class="tag-2">Featured</div>
                                 <div class="price-box">
                                 
@@ -171,10 +171,10 @@
                         </div>
                         <div class="detail">
                             <h1 class="title">
-                                <a href="car-details.html">{{data.car_title}}</a>
+                                <a href="{% url 'car_details' data.id %}">{{data.car_title}}</a>
                             </h1>
                             <div class="location">
-                                <a href="car-details.html">
+                                <a href="{% url 'car_details' data.id%}">
                                     <i class="flaticon-pin"></i>{{data.state}}. {{data.city}},
                                 </a>
                             </div>
@@ -217,7 +217,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="car-box">
                     <div class="car-thumbnail">
-                        <a href="car-details.html" class="car-img">
+                        <a href="{% url 'car_details' data.id%}" class="car-img">
                             <div class="tag">For Sale</div>
                             <img class="d-block w-100" src="{{data.car_photo.url}}" alt="car" style="min-height: 262px;max-height: 262px;">
                             <div class="facilities-list clearfix">
@@ -269,10 +269,10 @@
                     </div>
                     <div class="detail">
                         <h1 class="title">
-                            <a href="car-details.html">{{data.car_title}}</a>
+                            <a href="{% url 'car_details' data.id %}">{{data.car_title}}</a>
                         </h1>
                         <div class="location">
-                            <a href="car-details.html">
+                            <a href="{% url 'car_details' data.id%}">
                                 <i class="flaticon-pin"></i>{{data.state}}, {{data.city}}.
                             </a>
                         </div>
