--- a/templates/cars/search.html
+++ b/templates/cars/search.html
@@ -19,47 +19,36 @@
     <div class="container">
         <div class="search-area-inner">
             <div class="search-contents">
-                <form method="GET">
+                <form method="GET" action="{% url 'search'%}">
                     <div class="row">
+                 
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="form-group">
-                                <select class="selectpicker search-fields" name="select-brand">
-                                    <option disabled="disabled" selected="selected">Select Brand</option>
-                                    <option>Audi</option>
-                                    <option>BMW</option>
-                                    <option>Honda</option>
-                                    <option>Nissan</option>
+                                <select class="selectpicker search-fields" name="model">
+                                    <option disabled="disabled" selected="selected">Select Model</option>
+                                    {% for data in search_model %}
+                                    <option value="{{data}}">{{data}}</option>
+                                  {% endfor %}
                                 </select>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="form-group">
-                                <select class="selectpicker search-fields" name="select-make">
-                                    <option disabled="disabled" selected="selected">Select Make</option>
-                                    <option>BMW</option>
-                                    <option>Honda</option>
-                                    <option>Lamborghini Huracán</option>
-                                    <option>Sports Car</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
-                            <div class="form-group">
-                                <select class="selectpicker search-fields" name="select-location">
+                                <select class="selectpicker search-fields" name="city">
                                     <option disabled="disabled" selected="selected">Select Location</option>
-                                    <option>United States</option>
-                                    <option>United Kingdom</option>
+                                   {% for data in search_city%}
+                                    <option value="{{data}}">{{data}}</option>
+                                   {% endfor %}
                                 </select>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="form-group">
-                                <select class="selectpicker search-fields" name="select-year">
+                                <select class="selectpicker search-fields" name="year">
                                     <option disabled="disabled" selected="selected">Select Year</option>
-                                    <option>2016</option>
-                                    <option>2017</option>
-                                    <option>2018</option>
-                                    <option>2019</option>
+                                   {% for data in search_year %}
+                                    <option value="{{data}}">{{data}}</option>
+                                   {% endfor %}
                                 </select>
                             </div>
                         </div>
@@ -67,10 +56,11 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="form-group">
-                                <select class="selectpicker search-fields" name="select-type">
+                                <select class="selectpicker search-fields" name="condition">
                                     <option disabled="disabled" selected="selected">Select Type Of Car</option>
-                                    <option>New Car</option>
-                                    <option>Used Car</option>
+                                   {% for data in search_condition %}
+                                    <option value="{{data}}">{{data}}</option>
+                                  {% endfor %}
                                 </select>
                             </div>
                         </div>
@@ -78,11 +68,23 @@
                             <div class="form-group">
                                 <select class="selectpicker search-fields" name="transmission">
                                     <option disabled="disabled" selected="selected">Transmission</option>
-                                    <option>Automatic</option>
-                                    <option>Manual</option>
+                                   {% for data in search_transmission %}
+                                    <option value="{{data}}">{{data}}</option>
+                                   {% endfor %}
                                 </select>
                             </div>
                         </div>
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-6">
+                            <div class="form-group">
+                                <select class="selectpicker search-fields" name="color">
+                                    <option disabled="disabled" selected="selected">Color</option>
+                                  {% for data in search_color %}
+                                    <option value="{{data}}">{{data}}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+               
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                             <div class="form-group">
                                 <div class="range-slider">
