--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -36,39 +36,39 @@
         </div>
         <!-- Search box 3 start -->
         <div class="search-box-4 sb-8">
-            <form action="#" method="">
+            <form action="{% url 'search'%}" method="">
                 <div class="form-group">
                     <input type="text" name="keyword" placeholder="Search by name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-make">
+                    <select class="form-control search-fields" name="model">
                         <option selected="true" disabled="disabled">Model</option>
-                        {% for data in search_fields%}
-                            <option value="{{data.model}}">{{data.model}}</option>
+                        {% for data in search_model%}
+                            <option value="{{data}}">{{data}}</option>
                         {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-location">
+                    <select class="form-control search-fields" name="city">
                         <option selected="true" disabled="disabled">Location</option>
-                     {% for data in search_fields %}
-                     <option value="{{data.city}}">{{data.city}}</option>
+                     {% for data in search_location %}
+                     <option value="{{data}}">{{data}}</option>
                      {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-year">
+                    <select class="form-control search-fields" name="year">
                         <option selected="true" disabled="disabled">Year</option>
-                      {% for data in search_fields %}
-                      <option value="{{data.year}}">{{data.year}}</option>
+                      {% for data in search_year %}
+                      <option value="{{data}}">{{data}}</option>
                       {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
-                    <select class="form-control search-fields" name="select-type">
+                    <select class="form-control search-fields" name="body_style">
                         <option selected="true" disabled="disabled">Select Type Of Car</option>
-                        {% for data in search_fields %}
-                            <option value="{{data.body_style}}">{{data.body_style}}</option>
+                        {% for data in search_body_style %}
+                            <option value="{{data}}">{{data}}</option>
                         {% endfor %}
                     </select>
                 </div>
