--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -20,17 +20,26 @@
 <div class="contact-2 content-area-5">
     <div class="container">
         <!-- Main title -->
+        {% if contact_section %}
+        <div class="main-title text-center">
+            <h1>{{contact_section.contact_section_title}} <span>{{contact_section.contact_section_title_extra}}</span></h1>
+            <p>{{contact_section.contact_section_description}}</p>
+        </div>
+        {% else %}
         <div class="main-title text-center">
             <h1>Contact <span>Us</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
         </div>
-        <form action="#" method="POST" enctype="multipart/form-data">
+        {% endif %}
+        {% include 'includes/messages.html' %}
+        <form action="{% url 'contact' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
             <div class="row">
                 <div class="col-lg-7">
                     <div class="row">
                         <div class="col-md-6 text-left">
                             <div class="form-group name">
-                                <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+                                <input type="text" name="full_name" class="form-control" placeholder="Full Name" required>
                             </div>
                         </div>
                         <div class="col-md-6">
