--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,6 +7,19 @@
 <div class="banner" id="banner">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner banner-slider-inner text-center">
+            {% if banner %}
+            {% for data in banner %}
+            <div class="carousel-item banner-max-height {% if forloop.counter0 == 0 %}active {% endif %}} item-bg">
+                <img class="d-block w-100 h-100" src="{{ data.banner_image.url }}" alt="banner">
+                <div class="carousel-content container banner-info-2 bi-2 text-left">
+                    <h3>{{ data.banner_title_1 }}</h3>
+                    <h5>{{data.banner_title_2}}<br>
+                        {{data.banner_title_2_extra}} </h5>
+                    <a href="{% url 'services' %}" class="btn btn-lg btn-theme">Read more</a>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
             <div class="carousel-item banner-max-height active item-bg">
                 <img class="d-block w-100 h-100" src="{% static 'img/car-1.jpg'%}" alt="banner">
                 <div class="carousel-content container banner-info-2 bi-2 text-left">
@@ -34,6 +47,7 @@
                     <a href="#" class="btn btn-lg btn-theme">Read more</a>
                 </div>
             </div>
+            {% endif %}
         </div>
         <!-- Search box 3 start -->
         <div class="search-box-4 sb-8">
